--- a/vignettes/documentation.Rmd
+++ b/vignettes/documentation.Rmd
@@ -19,7 +19,7 @@ To understand the dynamic effects of a policy, it is common to summarize estimat
 
 ## Overview
 
-The `plausibounds` package provides simple additions to standard visualizations of dynamic treatment effects aimed at enhancing their informativeness. In particular, it provides functionality to:
+The `plausibounds` package provides simple additions to standard visualizations of dynamic treatment effects aimed at enhancing their informativeness following Freyaldenhoven and Hansen (2026). In particular, it provides functionality to:
 
 * include joint hypothesis tests and summary measures that are often of direct interest alongside the standard event-study plot.
 
@@ -31,7 +31,7 @@ We write $\theta=(\beta^{pre'},\beta')'$ for the $p \times 1$ vector that collec
 
 The package takes $\hat{\theta}$ and $\hat{V}_{\theta}$ as input.
 
-### Finding the surrogate path
+## Finding the surrogate path
 
 The main contribution is to include new visual elements meant to depict approximations to the underlying effect path constrained to exhibit economically and statistically plausible shapes. Intuitively, these elements formalize "visual data snooping": Our proposal approximates looking at a dynamic effect plot and then choosing a specification that "captures the main dynamics." 
 This specification should a) provide a notion of valid inference that explicitly accounts for the data-dependent choice of specification and b) use the full covariance structure of the estimates when choosing the specification.
@@ -40,47 +40,7 @@ Specifically, we construct *restricted estimates* and *plausible bounds* by usin
 
 Intuitively, the plausible bounds represent a compromise between inference under no restrictions --- which may yield very wide confidence intervals --- and inference based on a single, prespecified model that does not adapt to the data and may therefore be overly restrictive.
 
-
-The approach approximates $\hat{\beta}$ (assumed to be jointly normal with $\hat{\beta} \sim N(\beta, V_{\beta})$) by a *surrogate path* $\beta_M = P(M)\beta$, where $M$ indexes a model in a pre-specified universe $\mathcal{M}$. 
-The model universe is specified as follows: it includes polynomial specifications (up to cubic) and penalized smoothing that shrinks first (effect eventually dies out) and third (effect is smooth) differences. 
-
-Given estimates $\hat{\beta}$, the (non-polynomial) surrogate for a given model $M$ is obtained by solving a penalized least squares problem:
-
-$$
-\begin{align}
-\tilde{\beta}(M)
-&= \tilde{\beta}(\lambda_1, \lambda_2, K) \\
-&= \arg\min_{b}\Bigg(
-\underbrace{(\hat{\beta}-b)^{\prime}V^{-1}(\hat{\beta}-b)}_{\text{distance from $\hat{\beta}$}}
-+\lambda_1\,\underbrace{b^{\prime}D_1^{\prime}W_1(K)D_1 b}_{\text{penalty on first difference after horizon $K$}}
-+\lambda_2\,\underbrace{b^{\prime}D_3^{\prime}W_3 D_3 b}_{\text{penalty on third difference}}
-\Bigg).
-\end{align}
-$$
-
-where $D_1$ and $D_3$ are first- and third-difference operators, and $\lambda_1$, $\lambda_2$, and $K$ are tuning parameters that control smoothness and the timing of decay toward zero. The solution has closed form:
-
-$$
-\tilde{\beta}(M) = P(M)\hat{\beta}, \quad P(M) = \Big(V_\beta^{-1} + \lambda_1 D_1'W_1(K)D_1 + \lambda_2 D_3'W_3D_3\Big)^{-1} V_\beta^{-1}.
-$$
-
-Then, the best-fitting surrogate model $\hat{M}$ is selected by minimizing a BIC-type criterion:
-
-$$
-\hat{M} = \arg\min_{M \in \mathcal{M}} \; (\hat{\beta}-\tilde{\beta}(M))'V_\beta^{-1}(\hat{\beta}-\tilde{\beta}(M)) + \log(H)\,\text{df}(M),
-$$
-
-where the degrees of freedom is $\text{df}(M) = \mathrm{trace}(P(M))$. 
-Therefore, the main algorithm of the package simply iterates over all models in the pre-specified universe to find $\hat{M}$. 
-
-### Post-Selection Inference
-
-Once $\hat{M}$ is chosen, the package constructs confidence regions using post-selection inference (Berk et al. 2013), which accounts for the model selection step:
-
-$$
-\Pr\!\big(\beta_{\hat{M}} \in \text{CR}_{\text{PoSI}}\big) \ge 1-\alpha.
-$$
-
+For the technical details, see Section 3 of Freyaldenhoven and Hansen (2026).
 
 ## Basic Usage
 
@@ -352,5 +312,5 @@ pb_parallel <- plausible_bounds(
 
 ## References
 
-* Freyaldenhoven, S. and Hansen, C. (2025). "(Visualizing) Plausible Treatment Effect Paths." Federal Reserve Bank of Philadelphia and University of Chicago.
+* Freyaldenhoven, S. and Hansen, C. (2026). "(Visualizing) Plausible Treatment Effect Paths." Federal Reserve Bank of Philadelphia and University of Chicago.
 * Berk, R., Brown, L., Buja, A., Zhang, K., and Zhao, L. (2013). "Valid post-selection inference." *Annals of Statistics*, 41(2):802-837.
