--- a/vignettes/documentation.Rmd
+++ b/vignettes/documentation.Rmd
@@ -8,10 +8,11 @@ vignette: >
 ---
 
 
- 
+
 
 ``` r
 library(plausibounds)
+library(ggplot2)
 ```
 ## Dynamic Effect Plots
 
@@ -19,7 +20,7 @@ To understand the dynamic effects of a policy, it is common to summarize estimat
 
 ## Overview
 
-The `plausibounds` package provides simple additions to standard visualizations of dynamic treatment effects aimed at enhancing their informativeness following Freyaldenhoven and Hansen (2026). In particular, it provides functionality to:
+The `plausibounds` package provides simple additions to standard visualizations of dynamic treatment effects aimed at enhancing their informativeness following [Freyaldenhoven and Hansen (2026)](https://simonfreyaldenhoven.github.io/papers/Plausible_bounds.pdf). In particular, it provides functionality to:
 
 * include joint hypothesis tests and summary measures that are often of direct interest alongside the standard event-study plot.
 
@@ -41,6 +42,7 @@ Specifically, we construct *restricted estimates* and *plausible bounds* by usin
 Intuitively, the plausible bounds represent a compromise between inference under no restrictions --- which may yield very wide confidence intervals --- and inference based on a single, prespecified model that does not adapt to the data and may therefore be overly restrictive.
 
 For the technical details, see Section 3 of Freyaldenhoven and Hansen (2026).
+
 
 ## Basic Usage
 
@@ -72,7 +74,7 @@ print(var_smooth[1:4, 1:4])
 
 The `estimates_smooth` vector contains 36 treatment effect estimates at different horizons and 8 preperiods. The `var_smooth` matrix is a diagonal variance matrix with no correlation between periods.
 
-### Example 1: Independent Errors
+### Example 1: No Correlation Estimates
 
 A simple case uses the `plausible_bounds()` function with just the estimates and variance. The `alpha` parameter controls the confidence level (default is 0.05 for 95% confidence):
 
@@ -90,7 +92,7 @@ pb <- plausible_bounds(
 )
 ```
 
-The returned object is a list containing the bounds, test statistics, and metadata. The `summary()` method extracts the key results in a tabular format, showing the horizon, unrestricted coefficient estimates, restricted esitmates, and restricted bounds for that path:
+The returned object is a list containing the bounds, test statistics, and metadata. The `summary()` method extracts the key results in a tabular format, showing the horizon, unrestricted estimates, restricted estimates, and restricted/plausible bounds for that path:
 
 
 ``` r
@@ -99,42 +101,42 @@ summary(pb)
 #> -----------------------------------
 #> 
 #>  horizon unrestr_est   restr_est restr_lower   restr_upper
-#>        1  0.12340034  0.05029379  -0.2819062  0.3824937465
-#>        2 -0.04534908 -0.01242527  -0.2383862  0.2135356268
+#>        1  0.12340034  0.05029379  -0.2819062  0.3824937460
+#>        2 -0.04534908 -0.01242527  -0.2383862  0.2135356269
 #>        3 -0.16169097 -0.06083759  -0.2497435  0.1280683432
-#>        4 -0.20259667 -0.09671456  -0.2846543  0.0912251955
-#>        5 -0.03298893 -0.12450103  -0.3145739  0.0655718335
-#>        6 -0.02878808 -0.14990419  -0.3364671  0.0366587233
-#>        7 -0.11865547 -0.17627685  -0.3569812  0.0044275224
-#>        8 -0.33781817 -0.20310332  -0.3800159 -0.0261907311
-#>        9 -0.04988252 -0.22699284  -0.4032329 -0.0507527280
-#>       10 -0.23286451 -0.24373054  -0.4200712 -0.0673898601
-#>       11 -0.34721788 -0.24771659  -0.4212750 -0.0741582232
-#>       12 -0.31989801 -0.23460638  -0.3994920 -0.0697207153
-#>       13 -0.37015145 -0.20399763  -0.3533966 -0.0545986687
-#>       14 -0.18439333 -0.16031714  -0.2899628 -0.0306714683
-#>       15 -0.08283743 -0.11228840  -0.2247302  0.0001534092
+#>        4 -0.20259667 -0.09671456  -0.2846543  0.0912251951
+#>        5 -0.03298893 -0.12450103  -0.3145739  0.0655718329
+#>        6 -0.02878808 -0.14990419  -0.3364671  0.0366587226
+#>        7 -0.11865547 -0.17627685  -0.3569812  0.0044275218
+#>        8 -0.33781817 -0.20310332  -0.3800159 -0.0261907316
+#>        9 -0.04988252 -0.22699284  -0.4032329 -0.0507527284
+#>       10 -0.23286451 -0.24373054  -0.4200712 -0.0673898602
+#>       11 -0.34721788 -0.24771659  -0.4212750 -0.0741582231
+#>       12 -0.31989801 -0.23460638  -0.3994920 -0.0697207151
+#>       13 -0.37015145 -0.20399763  -0.3533966 -0.0545986686
+#>       14 -0.18439333 -0.16031714  -0.2899628 -0.0306714682
+#>       15 -0.08283743 -0.11228840  -0.2247302  0.0001534093
 #>       16 -0.06628430 -0.06984725  -0.1753613  0.0356668159
-#>       17  0.07793498 -0.04085456  -0.1491331  0.0674239407
-#>       18 -0.16041782 -0.02840299  -0.1404036  0.0835976486
-#>       19  0.08020676 -0.02831138  -0.1403457  0.0837229600
-#>       20 -0.26365956 -0.02835239  -0.1403724  0.0836676030
-#>       21 -0.09156697 -0.02833664  -0.1403591  0.0836857877
-#>       22 -0.08646877 -0.02831674  -0.1403418  0.0837083324
-#>       23  0.17552747 -0.02829484  -0.1403223  0.0837325887
-#>       24 -0.26331948 -0.02828204  -0.1403116  0.0837475461
-#>       25  0.26817909 -0.02825973  -0.1402913  0.0837717988
-#>       26  0.21390666 -0.02824996  -0.1402832  0.0837833350
-#>       27  0.02886865 -0.02825026  -0.1402851  0.0837846093
-#>       28 -0.03854033 -0.02825289  -0.1402892  0.0837833835
-#>       29 -0.17947818 -0.02825500  -0.1402925  0.0837824992
-#>       30 -0.04629705 -0.02825160  -0.1402902  0.0837869723
-#>       31 -0.26782818 -0.02824739  -0.1402869  0.0837920884
-#>       32  0.03586062 -0.02823508  -0.1402753  0.0838051517
-#>       33  0.17248994 -0.02822505  -0.1402659  0.0838157747
-#>       34 -0.01214121 -0.02822171  -0.1402630  0.0838195630
-#>       35 -0.08781408 -0.02821898  -0.1402605  0.0838225789
-#>       36  0.12013731 -0.02821446  -0.1402562  0.0838272500
+#>       17  0.07793498 -0.04085456  -0.1491331  0.0674239406
+#>       18 -0.16041782 -0.02840299  -0.1404036  0.0835976484
+#>       19  0.08020676 -0.02831138  -0.1403457  0.0837229598
+#>       20 -0.26365956 -0.02835239  -0.1403724  0.0836676028
+#>       21 -0.09156697 -0.02833664  -0.1403591  0.0836857875
+#>       22 -0.08646877 -0.02831674  -0.1403418  0.0837083322
+#>       23  0.17552747 -0.02829484  -0.1403223  0.0837325884
+#>       24 -0.26331948 -0.02828204  -0.1403116  0.0837475459
+#>       25  0.26817909 -0.02825973  -0.1402913  0.0837717986
+#>       26  0.21390666 -0.02824996  -0.1402832  0.0837833347
+#>       27  0.02886865 -0.02825026  -0.1402851  0.0837846091
+#>       28 -0.03854033 -0.02825289  -0.1402892  0.0837833833
+#>       29 -0.17947818 -0.02825500  -0.1402925  0.0837824990
+#>       30 -0.04629705 -0.02825160  -0.1402902  0.0837869721
+#>       31 -0.26782818 -0.02824739  -0.1402869  0.0837920882
+#>       32  0.03586062 -0.02823508  -0.1402753  0.0838051515
+#>       33  0.17248994 -0.02822505  -0.1402659  0.0838157745
+#>       34 -0.01214121 -0.02822171  -0.1402630  0.0838195628
+#>       35 -0.08781408 -0.02821898  -0.1402605  0.0838225786
+#>       36  0.12013731 -0.02821446  -0.1402562  0.0838272497
 ```
 
 For a more detailed view of the object structure:
@@ -162,7 +164,7 @@ str(pb)
 #>   ..$ K                 : int 18
 #>   ..$ lambda1           : num 22026
 #>   ..$ lambda2           : num 77
-#>   ..$ surrogate_class   : chr "M"
+#>   ..$ restr_class       : chr "M"
 #>   ..$ best_fit_model    :List of 5
 #>   .. ..$ estimates_proj: num [1:36] 0.0503 -0.0124 -0.0608 -0.0967 -0.1245 ...
 #>   .. ..$ var_proj      : num [1:36, 1:36] 0.008577 0.005264 0.002701 0.000868 -0.000297 ...
@@ -186,7 +188,7 @@ str(pb)
 ```
 
 The object contains several components. The `restricted_bounds` data frame is identical to that produced with the `summary()` method.
-The `restricted_bounds_metadata` list stores information about the model selection process, including the surrogate class selected (e.g., polynomial degree or penalized smoothing parameters), the degrees of freedom, and the sup-t critical value used in constructing the bounds.
+The `restricted_bounds_metadata` list stores information about the model selection process, including the model class selected (e.g., polynomial or penalized smoothing), the degrees of freedom, and the sup-t critical value used in constructing the bounds.
 The `avg_treatment_effect` component provides the average treatment effect estimate, its standard error, and confidence interval. 
 
 When arguments `include_pointwise` and `include_supt` of `plausible_bounds()` are `TRUE` (the default), the object also contains `pointwise_bounds` and `supt_bounds` lists with the corresponding confidence bounds. 
@@ -204,27 +206,27 @@ create_plot(pb)
 ```
 
 <div class="figure" style="text-align: center">
-<img src="figs/plot-iid-1.png" alt="Plausible bounds for treatment path estimates with independent errors"  />
-<p class="caption">Plausible bounds for treatment path estimates with independent errors</p>
+<img src="figs/plot-iid-1.png" alt="Plausible bounds for treatment path estimates with no correlation"  />
+<p class="caption">Plausible bounds for treatment path estimates with no correlation</p>
 </div>
 
 The plot displays several types of bounds and statistics, each serving a different inferential purpose:
 
-**Unrestricted estimates (black dots)**: The original treatment effect estimates $\hat{\beta}_h$ at each horizon. 
+**Unrestricted estimates (black dots)**: The original treatment effect estimates $\hat{\beta}_h$ at each horizon.
 
-**Plausible bounds (blue dashed lines)**: These bounds provide uniform $(1-\alpha)$ coverage for the selected surrogate, not the true treatment path itself. The surrogate path is chosen via BIC from the pre-specified model universe and represents a data-dependent smoothed approximation to the true treatment path.
+**Plausible bounds (blue dashed lines)**: These bounds provide uniform $(1-\alpha)$ coverage for the selected restricted estimates, not the true treatment path itself. The restricted path is chosen via BIC from the pre-specified model universe and represents a data-dependent smoothed approximation to the true treatment path.
 
 **Restricted estimates (blue line)**: The restricted estimates are the smoothed point estimates under the selected regularization.
 
 **Pointwise bounds (gray horizontal bars)**: Standard confidence intervals for each horizon separately, constructed as $\hat{\beta}_h \pm z_{1-\alpha/2} \sqrt{V_{\beta,hh}}$. 
 
-**Sup-t bounds (gray vertical lines)**: Uniform confidence bands that provide $(1-\alpha)$ joint coverage of the entire treatment path. These are constructed using the supremum of $t$-statistics from individual coefficients. Guarantee full-path coverage but can become quite wide.
+**Sup-t bounds (gray vertical lines)**: Uniform confidence bands that provide $(1-\alpha)$ joint coverage of the entire treatment path. These are constructed using the supremum of $t$-statistics from individual estimates. Guarantee full-path coverage but can become quite wide.
 
 **Annotations**: The bottom of the plot shows several summary statistics. The "No effect p-value" comes from a Wald test of the null hypothesis that all treatment effects are zero. The "Average effect [CI]" provides the average effect $\bar{\beta} = \frac{1}{H}\sum_h \beta_h$ along with its confidence interval.
 
-### Example 2: Correlated Errors
+### Example 2: Correlated Estimates
 
-When errors are correlated across horizons (common in dynamic settings), the plausible bounds adapt to the correlation structure and will tend to become wider:
+When estimates are correlated across horizons (common in dynamic settings), the plausible bounds adapt to the correlation structure and will tend to become wider:
 
 
 ``` r
@@ -241,8 +243,8 @@ create_plot(pb_corr)
 ```
 
 <div class="figure" style="text-align: center">
-<img src="figs/corr-plot-1.png" alt="Plausible bounds for treatment path estimates with correlated errors"  />
-<p class="caption">Plausible bounds for treatment path estimates with correlated errors</p>
+<img src="figs/corr-plot-1.png" alt="Plausible bounds for treatment path estimates with correlated estimates"  />
+<p class="caption">Plausible bounds for treatment path estimates with correlated estimates</p>
 </div>
 
 ## Pre-Treatment Periods
@@ -275,14 +277,14 @@ create_plot(pb_pre)
 
 The vertical dashed line at event time 0 separates pre- and post-treatment periods. Pre-treatment estimates appear at negative horizons, revealing any pre-existing trends. The plausible bounds and restricted estimates are only computed for the post-treatment periods, since the goal is inference on the treatment effect path.
 
-The annotations now include both Wald test p-values. The "Pretrends p-value" tests whether the pre-treatment coefficients are jointly zero—a rejection indicates violations of parallel trends. The "No effect p-value" tests whether the post-treatment coefficients are jointly zero. In this example, the pre-trends test rejects, suggesting that parallel trends may not hold.
+The annotations now include both Wald test p-values. The "Pretrends p-value" tests whether the pre-treatment coefficients are jointly zero—a rejection indicates violations of parallel trends. The "No effect p-value" tests whether the post-treatment coefficients are jointly zero.
 
 
 ## Customizing plots
 
-The `create_plot()` function provides a few arguments to customize which elements appear in the plot. 
-The `show_annotations` argument controls whether the Wald test results and average treatment effect are displayed at the bottom. 
-The `show_supt` and `show_pointwise` arguments control whether sup-t and pointwise bounds are included. 
+The `create_plot()` function provides a few arguments to customize which elements appear in the plot.
+The `show_annotations` argument controls whether the Wald test results and average treatment effect are displayed at the bottom.
+The `show_supt` and `show_pointwise` arguments control whether sup-t and pointwise bounds are included.
 For example, displaying only the plausible and pointwise bounds:
 
 
